overflow error fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,12 +1,14 @@
 body{
     margin: 0;
     padding: 0;	
+    overflow-x: hidden;
 }
 
 #headder{
     height: 60px;
     width: 100%;
-    background-color: #59BBDE;		
+    background-color: #59BBDE;
+    overflow: hidden;
 }
 
 #headNavi{
